kube/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: core-frontend-reader
  namespace: core-frontend
spec:
  hostnames:
    - core.preferans.uk
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
        - name: core-frontend-reader
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /reader

    - backendRefs:
        - name: core-frontend-reader
          port: 80
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      matches:
        - path:
            type: PathPrefix
            value: /static/reader
